--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@crystal-ball/semantic-release-base",
   "version": "1.2.0",
-  "description": "Fellowship shared Semantic Release configs",
+  "description": "🔮 Projects - Semantic Release configs",
   "main": "index.js",
   "keywords": [
+    "crystal-ball",
     "semantic-release"
   ],
   "contributors": [
