--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@crystal-ball/semantic-release-base",
-  "version": "1.2.0",
+  "version": "1.5.0",
   "description": "🔮 Projects - Semantic Release configs",
   "main": "index.js",
   "keywords": [
@@ -22,23 +22,23 @@
     "test:unit": "npx jest",
     "test": "npm run lint && npm run test:unit",
     "semantic-release": "semantic-release",
-    "lint": "NODE_ENV=test eslint --format=pretty *.js",
+    "lint": "NODE_ENV=test eslint --format=pretty **/*.js",
     "format": "prettier --write \"*.{js,md}\""
   },
   "dependencies": {
-    "@semantic-release/changelog": "3.0.2",
-    "@semantic-release/git": "7.0.8",
-    "@semantic-release/github": "5.2.10",
-    "@semantic-release/npm": "5.1.7",
+    "@semantic-release/changelog": "3.0.4",
+    "@semantic-release/git": "7.0.16",
+    "@semantic-release/github": "5.4.2",
+    "@semantic-release/npm": "5.1.13",
     "conventional-changelog-eslint": "3.0.1",
-    "semantic-release": "15.13.12"
+    "semantic-release": "15.13.18"
   },
   "devDependencies": {
-    "@crystal-ball/commitizen-adapter": "1.0.0",
+    "@crystal-ball/commitizen-adapter": "1.1.0",
     "@crystal-ball/commitizen-base": "1.0.0",
-    "@crystal-ball/prettier-base": "1.0.0",
-    "eslint-config-eloquence": "11.2.0",
-    "husky": "2.3.0",
+    "@crystal-ball/prettier-base": "1.1.0",
+    "eslint-config-eloquence": "12.0.0",
+    "husky": "3.0.0",
     "jest": "24.8.0"
   },
   "config": {
