--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "license": "ISC",
   "scripts": {
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "NODE_ENV=test eslint --format=pretty **/*.js",
     "test:unit": "npx jest",
-    "test": "npm run lint && npm run test:unit",
     "semantic-release": "semantic-release",
-    "lint": "NODE_ENV=test eslint --format=pretty **/*.js",
     "format": "prettier --write \"*.{js,md}\""
   },
   "dependencies": {
@@ -34,11 +34,11 @@
     "semantic-release": "15.13.19"
   },
   "devDependencies": {
-    "@crystal-ball/commitizen-adapter": "1.2.0",
+    "@crystal-ball/commitizen-adapter": "1.4.0",
     "@crystal-ball/commitizen-base": "1.0.0",
     "@crystal-ball/prettier-base": "1.2.0",
-    "eslint-config-eloquence": "12.0.1",
-    "husky": "3.0.0",
+    "eslint-config-eloquence": "12.3.0",
+    "husky": "3.0.1",
     "jest": "24.8.0"
   },
   "config": {
