Chore: Configure Github actions ⚙️ (#41)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
 
 # Cache dependencies
 cache: npm
-
 # Default for install is npm ci w/ package-lock.json
 # install
 
@@ -12,10 +11,10 @@ cache: npm
 # script
 
 # Release with Semantic after tests pass
-deploy:
-  provider: script
-  # Prevent Travis from resetting working directory after build
-  skip_cleanup: true
-  script: npx semantic-release
-  on:
-    branch: master
+# deploy:
+#   provider: script
+#   # Prevent Travis from resetting working directory after build
+#   skip_cleanup: true
+#   script: npx semantic-release
+#   on:
+#     branch: master
