--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:lint": "NODE_ENV=test eslint --format=pretty **/*.js",
     "test:unit": "npx jest",
     "semantic-release": "semantic-release",
-    "format": "prettier --write \"*.{js,md}\""
+    "format": "prettier --write \"lib/*.{js,md}\""
   },
   "dependencies": {
     "@semantic-release/changelog": "3.0.5",
