--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "semantic-release": "15.13.30"
   },
   "devDependencies": {
-    "@crystal-ball/commitizen-adapter": "1.4.0",
+    "@crystal-ball/commitizen-base": "2.1.0",
     "@crystal-ball/prettier-base": "1.6.0",
     "eslint-config-eloquence": "12.9.1",
     "husky": "3.0.9",
@@ -44,12 +44,12 @@
   },
   "config": {
     "commitizen": {
-      "path": "@crystal-ball/commitizen-adapter"
+      "path": "@crystal-ball/commitizen-base"
     }
   },
   "husky": {
     "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook"
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "prettier": "@crystal-ball/prettier-base",
