Update: Package dependencies 🆙

--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
     "format": "prettier --write '*.{js,json,md}' '**/*.{js,json,md,mdx,scss}' !CHANGELOG.md"
   },
   "dependencies": {
-    "@semantic-release/changelog": "5.0.0",
+    "@semantic-release/changelog": "5.0.1",
     "@semantic-release/commit-analyzer": "8.0.1",
     "@semantic-release/git": "9.0.0",
-    "@semantic-release/github": "7.0.4",
-    "@semantic-release/npm": "7.0.4",
+    "@semantic-release/github": "7.0.5",
+    "@semantic-release/npm": "7.0.5",
     "@semantic-release/release-notes-generator": "9.0.1",
     "conventional-changelog-eslint": "3.0.4",
-    "semantic-release": "17.0.4"
+    "semantic-release": "17.0.6"
   },
   "devDependencies": {
     "@crystal-ball/commitizen-base": "2.4.0",
-    "@crystal-ball/prettier-base": "1.6.0",
+    "@types/jest": "25.2.1",
+    "@crystal-ball/prettier-base": "2.0.0",
     "eslint-config-eloquence": "13.6.0",
-    "husky": "4.2.3",
-    "jest": "25.1.0"
+    "husky": "4.2.5",
+    "jest": "25.3.0"
   },
   "prettier": "@crystal-ball/prettier-base",
   "config": {
