--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,14 +2,7 @@ name: CI/CD
 on: [push]
 
 jobs:
-  skip:
-    name: CI Skip
-    if: contains(github.event.head_commit.message, 'skip ci')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Skip CI Commit
-        run: echo "Skip CI commit success"
-
+  # --- Package testing ✅
   test:
     name: Continuous Integration
     if: contains(github.event.head_commit.message, 'skip ci') == false
@@ -19,11 +12,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '12.16'
       - name: Install
         run: CI=true npm install
       - name: Code Climate - Setup
-        # Install the Code Climate reporter in workspace
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
@@ -40,6 +32,7 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
           GIT_BRANCH: ${{ github.head_ref }}
 
+  # --- Package publishing 🚀
   publish:
     name: Continuous Deployment
     needs: test
@@ -50,7 +43,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '12.16'
       - name: Install
         run: CI=true npm install
       - name: Release
