Chore: Upgrade package configs ⚙️ (#145)

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.16'
+      - name: NPM Cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Install
-        run: CI=true npm install
+        run: CI=true npm ci
       - name: Code Climate - Setup
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -44,8 +51,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.16'
+      - name: NPM Cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Install
-        run: CI=true npm install
+        run: CI=true npm ci
       - name: Release
         run: npx semantic-release
         env:
