--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@crystal-ball/commitizen-base": "2.11.0",
     "@crystal-ball/prettier-base": "2.10.0",
     "@types/jest": "27.4.0",
-    "eslint-config-eloquence": "19.1.0",
-    "jest": "27.4.5"
+    "eslint-config-eloquence": "21.2.0",
+    "jest": "27.4.7",
+    "node-notifier": "10.0.0",
+    "typescript": "4.5.5"
   }
 }
